fixed overflow on text cover

--- a/src/app/pages/launcher/my-adventures/my-adventures.component.scss
+++ b/src/app/pages/launcher/my-adventures/my-adventures.component.scss
@@ -77,6 +77,7 @@
     border: 3px solid #181818;
     cursor: pointer;
     margin: 20px;
+    overflow: hidden;
 
     &:hover {
 
@@ -220,13 +221,14 @@
     .adventure-name {
         position: absolute;
         left: 0;
-        top: 150px;
+        top: 0;
 
         display: flex;
         flex-flow: row nowrap;
         justify-content: center;
         align-items: center;
         width: 100%;
+        height: 100%;
 
         color: $c-whitest;
         text-align: center;
@@ -238,6 +240,9 @@
         font-weight: 600;
         line-height: 71px;
         letter-spacing: 1px;
+        text-overflow: ellipsis;
+        word-break: break-word;
+        padding: 10px;
     }
 
     .settings-overlay {
